k8s/pluto/storage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: pluto
  labels:
    app: storage
spec:
  selector:
    app: storage
  ports:
  - name: mail
    port: 20001
    targetPort: 20001
  - name: sync
    port: 30001
    targetPort: 30001
