k8s/pluto/storage/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: federation
  name: storage
  namespace: pluto
spec:
  backend:
    serviceName: storage
    servicePort: 31000
